--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   | default @import url()
   |============================
 */
-@import url('./test.css');
+@import url('./css/test.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
